# Mlopstrabajofinal

./: .gitignore  EDA_cami.ipynb  Readme.md  mlopstrabajofinal.ipynb  obtaindata.py  ppal.py  pyproject.toml
Experiment_tracking/: modelo_cami.ipynb  modelo_mauro.ipynb  modelo_orquestacion_camila.py
Models/: test.py
Scenarios/: scenario-1.ipynb
Scenarios/mlartifacts/103473547511545640/models/m-13f428a1165547879cbf21df17605551/artifacts/: MLmodel
Scenarios/mlartifacts/103473547511545640/models/m-3030c1d150e14ab7a9430b2378054de9/artifacts/: MLmodel
Scenarios/mlartifacts/103473547511545640/models/m-438a36a6590142879bb7fc77a1841971/artifacts/: MLmodel
Scenarios/mlartifacts/103473547511545640/models/m-aec56110ed80412ba2ae7d0259e93643/artifacts/: MLmodel
erase/: mlopstrabajofinal.ipynb
mlartifacts/216356639863519653/models/m-fb77276afbb847f1a3583d4560523312/artifacts/: MLmodel
mlartifacts/378312080640238452/models/m-05b8d15bc92c4d6b9bfd00dd68da76d5/artifacts/: MLmodel
mlartifacts/904870624907446826/models/m-1e3df3e1862a43adbc423b0ffabe13c0/artifacts/: MLmodel
mlartifacts/904870624907446826/models/m-4e4b0a28bbf94f1699014da283792d44/artifacts/: MLmodel
mlartifacts/904870624907446826/models/m-b004011b535541c5955e59c3a400d3b7/artifacts/: MLmodel
mlartifacts/904870624907446826/models/m-dbb4820ce85245b5a13affa99020332e/artifacts/: MLmodel
notebooks/: mlopstrabajofinal.ipynb
