[project]
name = "Mlopstrabajofinal"
version = "0.1.0"
description = "MLOps course exercises"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "ucimlrepo>=0.0.7",
]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "black",
  "pre-commit",
]


