[project]
name = "Mlopstrabajofinal"
version = "0.1.0"
description = "MLOps course exercises"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.6",
    "mlflow>=3.4.0",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "prefect>=3.4.22",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "ucimlrepo>=0.0.7",
]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "black",
  "pre-commit",
]


